# Aksenkin_prog_basics

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp
.github/workflows/: ci.yml
include/: EquationSolver.h  EquationSolving.h  benchmark.h  calculations.h  computer.h  dictionary.h  main.h  matrixInverser.h  methods.h  mprinter.h  solution.h  sorts.h  task1.h  task2.h  task3.h  task4.h  utils.h
src/: EquationSolver.cpp  EquationSolving.cpp  benchmark.cpp  calculations.cpp  computer  computer.cpp  dictionary.cpp  main  main.cpp  matrixInverser.cpp  methods.cpp  mprinter.cpp  solution.cpp  sorts.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  utils.cpp
